src/test/deca/syntax/valid/escape-char.lex
OBRACE: [@0,130:130='{',<8>,11:0]
PRINTLN: [@1,136:142='println',<6>,12:4]
OPARENT: [@2,143:143='(',<10>,12:11]
STRING: [@3,144:147='"\\"',<1>,12:12]
COMMA: [@4,148:148=',',<12>,12:16]
STRING: [@5,149:152='"\""',<1>,12:17]
CPARENT: [@6,153:153=')',<11>,12:21]
SEMI: [@7,154:154=';',<3>,12:22]
CBRACE: [@8,156:156='}',<9>,13:0]
