src/test/deca/syntax/invalid/else-first.lex
OBRACE: [@0,158:158='{',<8>,10:0]
ELSE: [@1,164:167='else',<21>,11:4]
OBRACE: [@2,168:168='{',<8>,11:8]
CBRACE: [@3,169:169='}',<9>,11:9]
IF: [@4,171:172='if',<20>,11:11]
OPARENT: [@5,173:173='(',<10>,11:13]
TRUE: [@6,174:177='true',<16>,11:14]
CPARENT: [@7,178:178=')',<11>,11:18]
OBRACE: [@8,180:180='{',<8>,11:20]
CBRACE: [@9,181:181='}',<9>,11:21]
CBRACE: [@10,183:183='}',<9>,12:0]
